chore: add multi-stage Dockerfile for Render deployment